# new_bug_tracker

./: db.sqlite3  pyproject.toml
bug_tracker/: settings.py  urls.py
bug_tracker_app/: apps.py  forms.py  models.py  views.py
bug_tracker_app/migrations/: 0001_initial.py
templates/: base.html  index.html  ticket_detail.html  user_detail.html
