[tool.poetry]
name = "new_bug_tracker"
version = "0.1.0"
description = ""
authors = ["ken stephens <kenstephens33@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
